@@ -40,6 +40,9 @@ bzr-svn 0.5.1					UNRELEASED
      branch ancestry to find out tag revision ids rather than the remote 
 	 Subversion branch.
 
+   * Use VersionedFiles.insert_record_stream() rather than VersionedFiles.add_lines(), 
+     should be slightly faster.
+
 bzr-svn 0.5.0					2009-02-03
 
   BUG FIXES
